--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.496.0",
+    "aws-sdk": "^2.1540.0",
     "axios": "^1.6.5",
     "body-parser": "^1.20.2",
     "child_process": "^1.0.2",
@@ -21,7 +23,7 @@
     "follow-redirects": "^1.15.5",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.6.1",
+    "mysql2": "^3.7.1",
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
     "ws": "^8.13.0"
